--- a/FredBoat/feature_flags.properties
+++ b/FredBoat/feature_flags.properties
@@ -32,3 +32,4 @@
 # example to turn a feature on (uncomment it):
 #RATE_LIMITER=false
 #CHATBOT=false
+FULL_STACK_TRACES_FOR_QUEUED_REST_ACTIONS=true
